# wellbeing-log16

./: .gitignore  CONTRIBUTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: paths.example.json
docs/: log16-code-vs-runtime-split-v01.md  log16-current-program-inventory-v01.md  log16-current-root-usage-v01.md  log16-git-cleanup-v01-log.md  log16-git-local-snapshot-v01-check.md  log16-git-local-snapshot-v01-log.md  log16-git-local-snapshot-v01.md  log16-github-publication-commands-template.md  log16-github-publication-policy-v01.md  log16-github-publish-guarded-v01.md  log16-github-remote-dry-run-v01.md  log16-github-sanitation-audit-v01-review.md  log16-hardcoded-paths-audit-v01.md  log16-migration-dry-run-v01-output.md  log16-migration-dry-run-v01.md  log16-module-map-v01.md  log16-module-split-v01-test-output.md  log16-module-split-v01.md  log16-module-split-v02-dashboard-review.md  log16-module-split-v02-test-output.md  log16-module-split-v03-status-core.md  log16-module-split-v03-test-output.md  log16-module-split-v04-dashboard-cards.md  log16-module-split-v04-test-output.md  log16-module-split-v05-cli-entrypoint.md  log16-module-split-v05-test-output.md  log16-module-split-v06-cli-bridge.md  log16-module-split-v06-test-output.md  log16-module-split-v07-health-check.md  log16-module-split-v07-test-output.md  log16-productization-plan-v01.md  log16-provider-adapter-roadmap-v01.md  log16-release-v0.2.0-lab-health-output.json  log16-release-v0.2.0-lab-test-output.md  log16-release-v0.2.0-lab.md  log16-release-v0.3.0-lab-doctor-output.json  (+24 more)
(+139 files in other folders)
