[project]
name = "wellbeing-log16"
version = "0.1.0"
description = "log16 project knowledge, task, entity-response and review system for Blagopoluchie"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
